<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@mipmap/tanchu">
    
    <RelativeLayout 
        android:id="@+id/photograph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/black_textview"
            android:textSize="20sp"
            android:text="@string/photograph"/>
    </RelativeLayout>
    <RelativeLayout 
         android:id="@+id/dialog_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/black_textview"
             android:textSize="20sp"
            android:text="@string/choice"/>
    </RelativeLayout>
    <RelativeLayout 
         android:id="@+id/photo_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textSize="20sp"
            style="@style/black_textview"
            android:text="@string/photo_cancel"/>
    </RelativeLayout>

</LinearLayout>
