<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">
    <include
        android:id="@+id/change_pwd_top"
        layout="@layout/activity_toplaynewtop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        style="@style/black_grey_textview"
        android:text="@string/change_pwd_toast"
        android:textColor="#666666"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/black_textview"
            android:text="@string/old_pay_pwd"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        <EditText
            android:id="@+id/input_old_pay_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@null"
            android:maxLength="6"
            style="@style/Gainsboro_textview"
            android:textColorHint="@color/grey_700"
            android:hint="@string/input_old_pay_pwd"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/black_textview"
            android:text="@string/new_pay_pwd"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        <EditText
            android:id="@+id/input_new_pay_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLength="6"
            android:inputType="textPassword"
            style="@style/Gainsboro_textview"
            android:textColorHint="@color/grey_700"
            android:hint="@string/input_new_pay_pwd"/>
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"

        android:background="@color/white"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/black_textview"
            android:text="@string/queren_new_pay_pwd"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        <EditText
            android:id="@+id/input_queren_new_pay_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@null"
            android:maxLength="6"
            style="@style/Gainsboro_textview"
            android:textColorHint="@color/grey_700"
            android:hint="@string/input_queren_new_pay_pwd"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/set_longin_pwd_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/white"
        android:background="@mipmap/wallet_money_mm_btn_blue"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="确认修改" />
    <!--<TextView-->
        <!--android:id="@+id/forget_pay_password"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_gravity="right"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:clickable="true"-->
        <!--android:text="@string/forget_password"-->
        <!--android:textColor="@color/grey_700"-->
        <!--android:textSize="16sp" />-->
</LinearLayout>