<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">
    <include
        android:id="@+id/change_login_top"
        layout="@layout/activity_toplaynewtop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        style="@style/black_grey_textview"
         android:textColor="#666666"
        android:text="@string/change_pwd_toast"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/black_textview"
            android:text="@string/old_login_pwd"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        <EditText
            android:id="@+id/input_ogin_pay_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@null"
            android:textSize="16sp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:maxLength="20"
            style="@style/Gainsboro_textview"
            android:textColorHint="@color/grey_700"
            android:hint="@string/input_ogin_pay_pwd"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/black_textview"
                android:text="@string/yanzhengma"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            >
            <EditText
                android:id="@+id/chang_longin_yanzhengma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:maxLength="6"
                android:inputType="number"
                style="@style/Gainsboro_textview"
                android:textColorHint="@color/grey_700"
                android:hint="@string/input_yanzhengma"
                android:textSize="14sp"/>

            <!--<ImageButton-->
                <!--android:id="@+id/chang_longin_send"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--style="@style/black_textview"-->
                <!--android:background="@drawable/registered_send"-->
                <!--/>-->
            <RelativeLayout
                android:id="@+id/chang_longin_send_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/withdrawal">
                <TextView
                    android:id="@+id/chang_longin_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    style="@style/Gainsboro_textview"
                    android:textSize="14sp"
                    android:text="获取验证码"/>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/black_textview"
            android:text="@string/new_pay_pwd"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        <EditText
            android:id="@+id/input_new_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            style="@style/Gainsboro_textview"
            android:textColorHint="@color/grey_700"
            android:hint="@string/input_new_pay_pwd"/>
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"

        android:background="@color/white"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/black_textview"
            android:text="@string/queren_new_pay_pwd"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        <EditText
            android:id="@+id/input_queren_new_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            style="@style/Gainsboro_textview"
            android:textColorHint="@color/grey_700"
            android:hint="@string/input_queren_new_pay_pwd"/>
        </RelativeLayout>

    </LinearLayout>
    <!--<RelativeLayout
        android:id="@+id/change_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/login_button"/>
    </RelativeLayout>-->

    <Button
        android:id="@+id/change_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/white"
        android:background="@mipmap/wallet_money_mm_btn_blue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="确认修改" />

</LinearLayout>