<?xml version="1.0" encoding="utf-8"?>

<!-- 导航 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/zone_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/zone_phone_iv"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/myticket_exchange_icon_phone" />

            <TextView
                android:id="@+id/zone_phone_tv"
                style="@style/Gainsboro_textview_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/zone_phone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_art"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/zone_art_iv"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/myticket_exchange_icon_art" />

            <TextView
                android:id="@+id/zone_art_tv"
                style="@style/Gainsboro_textview_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/zone_art" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_fitment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/zone_fitment_iv"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/myticket_exchange_icon_fitment" />

            <TextView
                android:id="@+id/zone_fitment_tv"
                style="@style/Gainsboro_textview_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/zone_fitment" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/zone_home_iv"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/myticket_exchange_icon_home" />

            <TextView
                android:id="@+id/zone_home_tv"
                style="@style/Gainsboro_textview_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/zone_home" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/zone_drink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/zone_drink_iv"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/myticket_exchange_icon_drinks" />

            <TextView
                android:id="@+id/zone_drink_tv"
                style="@style/Gainsboro_textview_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/zone_drink" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_clothes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/zone_clothes_iv"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/myticket_exchange_icon_clothes" />

            <TextView
                android:id="@+id/zone_clothes_tv"
                style="@style/Gainsboro_textview_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/zone_clothes" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_face"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/zone_face_iv"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/myticket_exchange_icon_face" />

            <TextView
                android:id="@+id/zone_face_tv"
                style="@style/Gainsboro_textview_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/zone_face" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_rest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/zone_rest_iv"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/myticket_exchange_icon_rest" />

            <TextView
                android:id="@+id/zone_rest_tv"
                style="@style/Gainsboro_textview_sm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/zone_rest" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>